# tp-furbo

./: .gitignore  README.md  analysis.ipynb  constants.py  download_data.py  extract_frames_snb.py  generate_mocks.py  inference.ipynb  main.py  pyproject.toml  requirements.txt  teams_segmentation.ipynb  train.ipynb  train_tdeed_bas.py  transformation.ipynb
Data_utils/: README.md
Data_utils/External_Detections/: coco_to_yolo.py  create_data_yaml.py  merge_datasets.py  slice_images.py  visualize_coco_dataset.py
Data_utils/SoccerNet_Detections/: constants.py  data_preprocessing.py  get_soccernet_data.py
Data_utils/SoccerNet_Keypoints/: constants.py  create_dataset_yaml.py  downloader.py  get_pitch_object.py  (+3 more)
data/: calibration_MOCK.json  detections_MOCK.json
homografia_cancha/: README.md  descargar_dataset.py  generate_pn_keypoints.py  inference.py  inspect_heatmaps.py  inspect_npz.py  run_evaluation.sh  run_inference.sh  train.py  train_l.py
keypoint_detection/: __init__.py  detect_keypoints.py  keypoint_constants.py
pipelines/: __init__.py  detection_pipeline.py  keypoint_pipeline.py  processing_pipeline.py  tactical_pipeline.py  tracking_pipeline.py
player_annotations/: __init__.py  annotators.py
player_clustering/: __init__.py  clustering.py  embeddings.py
player_detection/: __init__.py  detect_players.py  detection_constants.py
player_tracking/: __init__.py  tracking.py
src/: actions_MOCK.json  generate_mocks.py  main.py  pitch_annotator.py
tactical_analysis/: homography.py
util/: dataset.py
utils/: __init__.py  radar_utils.py  vid_utils.py
(+89 files in other folders)
