[project]
name = "tp-furbo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "soccernet>=0.1.62",
    "supervision>=0.27.0",
    "torch>=2.9.1",
    "transformers>=4.57.1",
    "ultralytics>=8.3.228",
    "umap-learn>=0.5.9.post2",
]
